# fileserver_rs

./: Cargo.toml  Readme.md
HTML/other/: aids.html
bruno/rust-fileserver/: HTML folder.bru  bruno.json
src/: main.rs
