[package]
name = "filehost"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cali = { git = "https://github.com/GamingGuy003/cali" }
http_serv = { git = "https://github.com/GamingGuy003/http_serv", features = [ "threading", "log" ] }
log = "0.4.21"
pretty_env_logger = "0.5.0"